# rpi-pico-sample-project

./: .gitignore  LICENSE  README.md
blink_rp2350/: CMakeLists.txt  pico_build.sh
blink_rp2350/lib/: CMakeLists.txt
blink_w/: CMakeLists.txt  memo.txt  pico_clean.sh  pico_upload.sh
blink_w/lib/lib_test/: lib_test.hpp
blink_w/lib/lib_test_test/: CMakeLists.txt  lib_test_test.cpp  lib_test_test.hpp
helloworld/: CMakeLists.txt  pico_build.sh  pico_upload.sh
helloworld/lib/: CMakeLists.txt
helloworld/lib/lib_test/: lib_test.cpp
helloworld/src/: main.cpp
pio_test/: CMakeLists.txt
pio_test/lib/: CMakeLists.txt
